<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjectoCampus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ingresar">Ingresar</string>
    <string name="horario">Horario</string>
    <string name="curso">Curso</string>
    <string name="notas">Notas</string>
    <string name="asistencia">Asistencia</string>
    <string name="material">Material</string>
    <string name="buscar">Buscar</string>
    <string name="nombre">Nombre</string>
    <string name="horas">HoraInicio-HoraFin</string>
    <string name="dia">Dia</string>
    <string name="title_activity_principal_landing">MainActivity</string>
    <string name="buscarDocente">Buscar Docente</string>
    <string name="title_activity_horario">MainActivity</string>

</resources>
