<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horario"
        android:id="@+id/btn_alumno_horario"
        android:layout_alignParentTop="true"
        android:layout_marginTop="98dp"
        android:layout_alignLeft="@+id/btn_alumno_cursos"
        android:layout_alignRight="@+id/btn_alumno_cursos" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curso"
        android:id="@+id/btn_alumno_cursos"
        android:layout_below="@+id/btn_alumno_horario"
        android:layout_marginTop="39dp"
        android:layout_alignRight="@+id/btn_alumno_buscarHD"
        android:layout_alignLeft="@+id/btn_alumno_buscarHD" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscarDocente"
        android:id="@+id/btn_alumno_buscarHD"
        android:layout_below="@+id/btn_alumno_cursos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

</RelativeLayout>
